include/maplibre_native_c/map.h

/** Options used when creating a map. */
typedef struct mln_map_options {
  uint32_t size;
  /**
   * Initial logical map width in UI pixels. Must be positive.
   *
   * Attaching a render session replaces this with the render target extent, and
   * mln_render_session_resize() replaces it again. Until the first attach it is
   * the viewport that camera and projection queries such as
   * mln_map_camera_for_lat_lng_bounds() and mln_map_pixel_for_lat_lng() are
   * answered against.
   */
  uint32_t width;
  /** Initial logical map height in UI pixels. See width. */
  uint32_t height;
  /**
   * UI-to-device pixel scale. Must be positive and finite.
   *
   * Unlike width and height, this is fixed for the lifetime of the map and
   * selects sprites, glyphs, and raster tiles for every frame the map renders.
   * Render targets carry their own scale factor for geometry and shaders, so
   * create the map with the scale factor you intend to render at. A render
   * session attached or resized with a different scale factor logs a warning
   * and renders styled imagery chosen for the map's density.
   */
  double scale_factor;
  /** One of mln_map_mode. Defaults to MLN_MAP_MODE_CONTINUOUS. */
  uint32_t map_mode;
  /**
   * Decodes MapLibre Tile (MLT) tiles whose integer streams use FastPFOR
   * encodings. Defaults to false.
   *
   * Enable this on maps that read vector sources created with
   * MLN_STYLE_VECTOR_TILE_ENCODING_MLT from a tile set that uses FastPFOR. It
   * is fixed for the lifetime of the map and applies to every MLT source the
   * map loads. A map created with this false decodes every other MLT encoding
   * and logs a tile parse warning for the FastPFOR ones.
   */
  bool fast_pfor_enabled;
} mln_map_options;
/** Screen-space point in logical map pixels. */
typedef struct mln_screen_point {
  double x;
  double y;
} mln_screen_point;
/** Screen-space inset in logical map pixels. */
typedef struct mln_edge_insets {
  double top;
  double left;
  double bottom;
  double right;
} mln_edge_insets;
/** Three-component vector used by free camera options. */
typedef struct mln_vec3 {
  double x;
  double y;
  double z;
} mln_vec3;
/** Quaternion stored as x, y, z, w components. */
typedef struct mln_quaternion {
  double x;
  double y;
  double z;
  double w;
} mln_quaternion;
/** Geographic coordinate in degrees used by map and projection APIs. */
typedef struct mln_lat_lng {
  /** Latitude in degrees. Input latitude must be finite and within [-90, 90].
   */
  double latitude;
  /** Longitude in degrees. Input longitude must be finite. */
  double longitude;
} mln_lat_lng;
/** UTF-8 text view. The pointer may be null only when size is 0. */
typedef struct mln_string_view {
  /** UTF-8 bytes. Null only when size is 0. */
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_geometry mln_geometry;
/**
 * MapLibre geometry input descriptor graph.
 *
 * Geometry coordinates use mln_lat_lng for consistency with the rest of the C
 * API. They are converted to native geometry points as longitude/latitude.
 * A root geometry descriptor starts at nesting depth 0. Status-returning
 * functions reject geometry collection children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_geometry {
  uint32_t size;
  /** One of mln_geometry_type. */
  uint32_t type;
  union {
    mln_lat_lng point;
    mln_coordinate_span line_string;
    mln_polygon_geometry polygon;
    mln_coordinate_span multi_point;
    mln_multi_line_geometry multi_line_string;
    mln_multi_polygon_geometry multi_polygon;
    mln_geometry_collection geometry_collection;
  } data;
} mln_geometry;
/** Geographic bounds in degrees. */
typedef struct mln_lat_lng_bounds {
  mln_lat_lng southwest;
  mln_lat_lng northeast;
} mln_lat_lng_bounds;
/** Tile-pyramid offline region definition. */
typedef struct mln_offline_tile_pyramid_region_definition {
  uint32_t size;
  /** Style URL. Copied during region creation. */
  const char* style_url;
  mln_lat_lng_bounds bounds;
  double min_zoom;
  /**
   * Maximum zoom. Positive infinity follows MapLibre Native behavior and lets
   * each tile source use its own maximum zoom.
   */
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_tile_pyramid_region_definition;
/** Geometry offline region definition. */
typedef struct mln_offline_geometry_region_definition {
  uint32_t size;
  /** Style URL. Copied during region creation. */
  const char* style_url;
  /** Geometry descriptor. Borrowed for the duration of region creation. */
  const mln_geometry* geometry;
  double min_zoom;
  /**
   * Maximum zoom. Positive infinity follows MapLibre Native behavior and lets
   * each tile source use its own maximum zoom.
   */
  double max_zoom;
  float pixel_ratio;
  bool include_ideographs;
} mln_offline_geometry_region_definition;
/** Tagged offline region definition. */
typedef struct mln_offline_region_definition {
  uint32_t size;
  /** One of mln_offline_region_definition_type. */
  uint32_t type;
  union {
    mln_offline_tile_pyramid_region_definition tile_pyramid;
    mln_offline_geometry_region_definition geometry;
  } data;
} mln_offline_region_definition;
/** Region data view returned from a snapshot or list handle. */
typedef struct mln_offline_region_info {
  uint32_t size;
  mln_offline_region_id id;
  mln_offline_region_definition definition;
  /** Metadata bytes. Valid until the owner snapshot/list is destroyed.
   */
  const uint8_t* metadata;
  size_t metadata_size;
} mln_offline_region_info;
/** Live map viewport and render-transform controls. */
typedef struct mln_map_viewport_options {
  uint32_t size;
  uint32_t fields;
  /** One of mln_north_orientation. */
  uint32_t north_orientation;
  /** One of mln_constrain_mode. */
  uint32_t constrain_mode;
  /** One of mln_viewport_mode. */
  uint32_t viewport_mode;
  mln_edge_insets frustum_offset;
} mln_map_viewport_options;