include/maplibre_native_c/runtime.h

typedef int64_t mln_offline_region_id;
/** Offline database operation token. Zero is never a valid operation ID. */
typedef uint64_t mln_offline_operation_id;
/** Offline region status snapshot. */
typedef struct mln_offline_region_status {
  uint32_t size;
  /** One of mln_offline_region_download_state. */
  uint32_t download_state;
  uint64_t completed_resource_count;
  uint64_t completed_resource_size;
  uint64_t completed_tile_count;
  uint64_t required_tile_count;
  uint64_t completed_tile_size;
  uint64_t required_resource_count;
  bool required_resource_count_is_precise;
  bool complete;
} mln_offline_region_status;
typedef struct mln_runtime_options {
  uint32_t size;
  uint32_t flags;
  /** Filesystem root for asset:// URLs. Copied during runtime creation. */
  const char* asset_path;
  /** Cache database path. Copied during runtime creation. */
  const char* cache_path;
  /** Maximum ambient cache size in bytes when the matching flag is set. */
  uint64_t maximum_cache_size;
} mln_runtime_options;
/** Rendering statistics reported in MLN_RUNTIME_EVENT_PAYLOAD_RENDER_FRAME. */
typedef struct mln_rendering_stats {
  uint32_t size;
  /** Frame CPU encoding time in seconds. */
  double encoding_time;
  /** Frame CPU rendering time in seconds. */
  double rendering_time;
  /** Number of frames rendered by the native renderer. */
  int64_t frame_count;
  /** Draw calls executed during the most recent frame. */
  int64_t draw_call_count;
  /** Total draw calls executed by the native renderer. */
  int64_t total_draw_call_count;
} mln_rendering_stats;
/** Payload for MLN_RUNTIME_EVENT_MAP_RENDER_FRAME_FINISHED. */
typedef struct mln_runtime_event_render_frame {
  uint32_t size;
  /** One of mln_render_mode. */
  uint32_t mode;
  /** Whether MapLibre needs another frame after this one. */
  bool needs_repaint;
  /** Whether symbol placement changed during this frame. */
  bool placement_changed;
  mln_rendering_stats stats;
} mln_runtime_event_render_frame;
/** Payload for MLN_RUNTIME_EVENT_MAP_RENDER_MAP_FINISHED. */
typedef struct mln_runtime_event_render_map {
  uint32_t size;
  /** One of mln_render_mode. */
  uint32_t mode;
} mln_runtime_event_render_map;
/** Payload for MLN_RUNTIME_EVENT_MAP_STYLE_IMAGE_MISSING. */
typedef struct mln_runtime_event_style_image_missing {
  uint32_t size;
  /**
   * Borrowed image ID bytes. Valid until the next poll for this runtime or
   * until the runtime is destroyed.
   */
  const char* image_id;
  /** Number of bytes in image_id, excluding the trailing null terminator. */
  size_t image_id_size;
} mln_runtime_event_style_image_missing;
/** Overscaled tile identity reported in tile observer events. */
typedef struct mln_tile_id {
  uint32_t overscaled_z;
  int32_t wrap;
  uint32_t canonical_z;
  uint32_t canonical_x;
  uint32_t canonical_y;
} mln_tile_id;
/** Payload for MLN_RUNTIME_EVENT_MAP_TILE_ACTION. */
typedef struct mln_runtime_event_tile_action {
  uint32_t size;
  /** One of mln_tile_operation. */
  uint32_t operation;
  mln_tile_id tile_id;
  /**
   * Borrowed source ID bytes. Valid until the next poll for this runtime or
   * until the runtime is destroyed.
   */
  const char* source_id;
  /** Number of bytes in source_id, excluding the trailing null terminator. */
  size_t source_id_size;
} mln_runtime_event_tile_action;
/** Payload for MLN_RUNTIME_EVENT_OFFLINE_REGION_STATUS_CHANGED. */
typedef struct mln_runtime_event_offline_region_status {
  uint32_t size;
  mln_offline_region_id region_id;
  mln_offline_region_status status;
} mln_runtime_event_offline_region_status;
/** Payload for MLN_RUNTIME_EVENT_OFFLINE_REGION_RESPONSE_ERROR. */
typedef struct mln_runtime_event_offline_region_response_error {
  uint32_t size;
  mln_offline_region_id region_id;
  /** One of mln_resource_error_reason. */
  uint32_t reason;
} mln_runtime_event_offline_region_response_error;
/** Payload for MLN_RUNTIME_EVENT_OFFLINE_REGION_TILE_COUNT_LIMIT_EXCEEDED. */
typedef struct mln_runtime_event_offline_region_tile_count_limit {
  uint32_t size;
  mln_offline_region_id region_id;
  uint64_t limit;
} mln_runtime_event_offline_region_tile_count_limit;
/** Payload for MLN_RUNTIME_EVENT_OFFLINE_OPERATION_COMPLETED. */
typedef struct mln_runtime_event_offline_operation_completed {
  uint32_t size;
  mln_offline_operation_id operation_id;
  /** One of mln_offline_operation_kind. */
  uint32_t operation_kind;
  /** One of mln_offline_operation_result_kind. */
  uint32_t result_kind;
  /** Async result status as a mln_status value. */
  int32_t result_status;
  /** Meaningful for MLN_OFFLINE_OPERATION_REGION_GET. */
  bool found;
} mln_runtime_event_offline_operation_completed;