bindings/vala/vapi/maplibre-native-c.vapi


    [CCode (cname = "mln_rendered_query_geometry_type", cprefix = "MLN_RENDERED_QUERY_GEOMETRY_TYPE_", has_type_id = false)]
    public enum RenderedQueryGeometryType {
        POINT,
        BOX,
        LINE_STRING
    }

    [CCode (cname = "mln_rendered_feature_query_option_field", cprefix = "MLN_RENDERED_FEATURE_QUERY_OPTION_", has_type_id = false)]
    [Flags]
    public enum RenderedFeatureQueryOptionField {
        LAYER_IDS
    }

    [CCode (cname = "mln_source_feature_query_option_field", cprefix = "MLN_SOURCE_FEATURE_QUERY_OPTION_", has_type_id = false)]
    [Flags]
    public enum SourceFeatureQueryOptionField {
        SOURCE_LAYER_IDS
    }

    [CCode (cname = "mln_queried_feature_field", cprefix = "MLN_QUERIED_FEATURE_", has_type_id = false)]
    [Flags]
    public enum QueriedFeatureField {
        SOURCE_ID,
        SOURCE_LAYER_ID,
        STATE
    }

    [CCode (cname = "mln_feature_extension_result_type", cprefix = "MLN_FEATURE_EXTENSION_RESULT_TYPE_", has_type_id = false)]
    public enum FeatureExtensionResultType {
        VALUE,
        FEATURE_COLLECTION
    }

    [CCode (cname = "mln_style_source_type", cprefix = "MLN_STYLE_SOURCE_TYPE_", has_type_id = false)]
    public enum StyleSourceType {
        UNKNOWN,
        VECTOR,
        RASTER,
        RASTER_DEM,
        GEOJSON,
        IMAGE,
        VIDEO,
        ANNOTATIONS,
        CUSTOM_VECTOR
    }

    [CCode (cname = "mln_style_tile_source_option_field", cprefix = "MLN_STYLE_TILE_SOURCE_OPTION_", has_type_id = false)]
    [Flags]
    public enum StyleTileSourceOptionField {
        MIN_ZOOM,
        MAX_ZOOM,
        ATTRIBUTION,
        SCHEME,
        BOUNDS,
        TILE_SIZE,
        VECTOR_ENCODING,
        RASTER_ENCODING
    }

    [CCode (cname = "mln_style_tile_scheme", cprefix = "MLN_STYLE_TILE_SCHEME_", has_type_id = false)]
    public enum StyleTileScheme {
        XYZ,
        TMS
    }

    [CCode (cname = "mln_style_vector_tile_encoding", cprefix = "MLN_STYLE_VECTOR_TILE_ENCODING_", has_type_id = false)]
    public enum StyleVectorTileEncoding {
        MVT,
        MLT
    }

    [CCode (cname = "mln_style_raster_dem_encoding", cprefix = "MLN_STYLE_RASTER_DEM_ENCODING_", has_type_id = false)]
    public enum StyleRasterDemEncoding {
        MAPBOX,
        TERRARIUM
    }

    [CCode (cname = "mln_custom_geometry_source_option_field", cprefix = "MLN_CUSTOM_GEOMETRY_SOURCE_OPTION_", has_type_id = false)]
    [Flags]
    public enum CustomGeometrySourceOptionField {
        MIN_ZOOM,
        MAX_ZOOM,
        TOLERANCE,
        TILE_SIZE,
        BUFFER,
        CLIP,
        WRAP
    }

    [CCode (cname = "mln_style_image_option_field", cprefix = "MLN_STYLE_IMAGE_OPTION_", has_type_id = false)]
    [Flags]
    public enum StyleImageOptionField {
        PIXEL_RATIO,
        SDF
    }

    [CCode (cname = "mln_location_indicator_image_kind", cprefix = "MLN_LOCATION_INDICATOR_IMAGE_KIND_", has_type_id = false)]
    public enum LocationIndicatorImageKind {
        TOP,
        BEARING,
        SHADOW
    }

    [CCode (cname = "mln_log_event", cprefix = "MLN_LOG_EVENT_", has_type_id = false)]
    public enum LogEvent {
        GENERAL,
        SETUP,
        SHADER,
        PARSE_STYLE,
        PARSE_TILE,
        RENDER,
        STYLE,
        DATABASE,
        HTTP_REQUEST,
        SPRITE,
        IMAGE,
        OPENGL,
        JNI,
        ANDROID,
        CRASH,
        GLYPH,
        TIMING
    }

    [Compact]
    [CCode (cname = "mln_runtime", free_function = "")]
    public class Runtime {}

    [Compact]
    [CCode (cname = "mln_map", free_function = "")]
    public class Map {}

    [Compact]
    [CCode (cname = "mln_render_session", free_function = "")]
    public class RenderSession {}

    [Compact]
    [CCode (cname = "mln_map_projection", free_function = "")]
    public class MapProjection {}

    [Compact]
    [CCode (cname = "mln_style_id_list", free_function = "")]
    public class StyleIdList {}

    [Compact]
    [CCode (cname = "mln_feature_query_result", free_function = "")]
    public class FeatureQueryResult {}

    [Compact]
    [CCode (cname = "mln_feature_extension_result", free_function = "")]
    public class FeatureExtensionResult {}

    [Compact]
    [CCode (cname = "mln_offline_region_snapshot", free_function = "")]
    public class OfflineRegionSnapshot {}

    [Compact]
    [CCode (cname = "mln_offline_region_list", free_function = "")]
    public class OfflineRegionList {}

    [Compact]
    [CCode (cname = "mln_json_snapshot", free_function = "")]
    public class JsonSnapshot {}

    [Compact]
    [CCode (cname = "mln_resource_request_handle", free_function = "")]
    public class ResourceRequestHandle {}

    [CCode (cname = "mln_runtime_options", has_type_id = false)]
    public struct RuntimeOptions {
        public uint32 size;
        public uint32 flags;
        public unowned string? asset_path;
        public unowned string? cache_path;
        public uint64 maximum_cache_size;
    }

    [SimpleType]
    [CCode (cname = "mln_offline_region_status", has_type_id = false)]
    public struct OfflineRegionStatus {
        public uint32 size;
        public uint32 download_state;
        public uint64 completed_resource_count;
        public uint64 completed_resource_size;
        public uint64 completed_tile_count;
        public uint64 required_tile_count;
        public uint64 completed_tile_size;
        public uint64 required_resource_count;
        public bool required_resource_count_is_precise;
        public bool complete;
    }

    [SimpleType]
    [CCode (cname = "mln_offline_tile_pyramid_region_definition", has_type_id = false)]
    public struct OfflineTilePyramidRegionDefinition {
        public uint32 size;
        public unowned string? style_url;
        public LatLngBounds bounds;
        public double min_zoom;
        public double max_zoom;
        public float pixel_ratio;
        public bool include_ideographs;
    }

    [SimpleType]
    [CCode (cname = "mln_offline_geometry_region_definition", has_type_id = false)]
    public struct OfflineGeometryRegionDefinition {
        public uint32 size;
        public unowned string? style_url;
        public Geometry* geometry;
        public double min_zoom;
        public double max_zoom;
        public float pixel_ratio;
        public bool include_ideographs;
    }

    [SimpleType]
    [CCode (cname = "mln_offline_region_definition", has_type_id = false)]
    public struct OfflineRegionDefinition {
        public uint32 size;
        public uint32 type;
        [CCode (cname = "data.tile_pyramid")]
        public OfflineTilePyramidRegionDefinition tile_pyramid;
        [CCode (cname = "data.geometry")]
        public OfflineGeometryRegionDefinition geometry;
    }

    [SimpleType]
    [CCode (cname = "mln_offline_region_info", has_type_id = false)]
    public struct OfflineRegionInfo {
        public uint32 size;
        public int64 id;
        public OfflineRegionDefinition definition;
        public uint8* metadata;
        public size_t metadata_size;
    }

    [SimpleType]
    [CCode (cname = "mln_rendering_stats", has_type_id = false)]
    public struct RenderingStats {
        public uint32 size;
        public double encoding_time;
        public double rendering_time;
        public int64 frame_count;
        public int64 draw_call_count;
        public int64 total_draw_call_count;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_render_frame", has_type_id = false)]
    public struct RuntimeEventRenderFrame {
        public uint32 size;
        public uint32 mode;
        public bool needs_repaint;
        public bool placement_changed;
        public RenderingStats stats;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_render_map", has_type_id = false)]
    public struct RuntimeEventRenderMap {
        public uint32 size;
        public uint32 mode;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_style_image_missing", has_type_id = false)]
    public struct RuntimeEventStyleImageMissing {
        public uint32 size;
        public char* image_id;
        public size_t image_id_size;
    }

    [SimpleType]
    [CCode (cname = "mln_tile_id", has_type_id = false)]
    public struct TileId {
        public uint32 overscaled_z;
        public int32 wrap;
        public uint32 canonical_z;
        public uint32 canonical_x;
        public uint32 canonical_y;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_tile_action", has_type_id = false)]
    public struct RuntimeEventTileAction {
        public uint32 size;
        public uint32 operation;
        public TileId tile_id;
        public char* source_id;
        public size_t source_id_size;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_offline_region_status", has_type_id = false)]
    public struct RuntimeEventOfflineRegionStatus {
        public uint32 size;
        public OfflineRegionId region_id;
        public OfflineRegionStatus status;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_offline_region_response_error", has_type_id = false)]
    public struct RuntimeEventOfflineRegionResponseError {
        public uint32 size;
        public OfflineRegionId region_id;
        public uint32 reason;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_offline_region_tile_count_limit", has_type_id = false)]
    public struct RuntimeEventOfflineRegionTileCountLimit {
        public uint32 size;
        public OfflineRegionId region_id;
        public uint64 limit;
    }

    [SimpleType]
    [CCode (cname = "mln_runtime_event_offline_operation_completed", has_type_id = false)]
    public struct RuntimeEventOfflineOperationCompleted {
        public uint32 size;
        public OfflineOperationId operation_id;
        public uint32 operation_kind;
        public uint32 result_kind;
        public int32 result_status;
        public bool found;
    }

    [CCode (cname = "mln_map_options", has_type_id = false)]
    public struct MapOptions {
        public uint32 size;
        public uint32 width;
        public uint32 height;
        public double scale_factor;
        public uint32 map_mode;
    }

    [SimpleType]
    [CCode (cname = "mln_string_view", has_type_id = false)]
    public struct StringView {
        public char* data;
        public size_t size;
    }

    [SimpleType]
    [CCode (cname = "mln_lat_lng", has_type_id = false)]
    public struct LatLng {
        public double latitude;
        public double longitude;
    }

    [SimpleType]
    [CCode (cname = "mln_lat_lng_bounds", has_type_id = false)]
    public struct LatLngBounds {
        public LatLng southwest;
        public LatLng northeast;
    }

    [SimpleType]
    [CCode (cname = "mln_screen_point", has_type_id = false)]
    public struct ScreenPoint {
        public double x;
        public double y;
    }

    [SimpleType]
    [CCode (cname = "mln_vec3", has_type_id = false)]
    public struct Vec3 {
        public double x;
        public double y;
        public double z;
    }

    [SimpleType]
    [CCode (cname = "mln_quaternion", has_type_id = false)]
    public struct Quaternion {
        public double x;
        public double y;
        public double z;
        public double w;
    }

    [SimpleType]
    [CCode (cname = "mln_edge_insets", has_type_id = false)]
    public struct EdgeInsets {
        public double top;
        public double left;
        public double bottom;
        public double right;
    }

    [CCode (cname = "mln_map_viewport_options", has_type_id = false)]
    public struct MapViewportOptions {
        public uint32 size;
        public uint32 fields;
        public uint32 north_orientation;
        public uint32 constrain_mode;
        public uint32 viewport_mode;
        public EdgeInsets frustum_offset;
    }
